fix spacing prod

--- a/src/scss/partials/_produits.scss
+++ b/src/scss/partials/_produits.scss
@@ -1,18 +1,12 @@
 .prodSection{
+    padding: 120px;
     & h2{
-        padding-left: 120px;
         margin-top: 120px;
     }
     &__cat{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        & :first-child{
-            margin-left: 120px;
-        }
-        & :last-child{
-            margin-right: 120px;
-        }
         & a{
             text-align: center;
             text-decoration: none;
@@ -22,8 +16,6 @@
     }
     &List{
         display: flex;
-        margin-left: 120px;
-        margin-right: 120px;
         flex-wrap: wrap;
         &__product{
             margin: 30px;
